--- a/MwtWinDll/Formula.R/DESCRIPTION
+++ b/MwtWinDll/Formula.R/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: Formula.R
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Chemical Formula generator 
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Author: xie.guigang@gcmodeller.org
+Maintainer: xieguigang <xie.guigang@gcmodeller.org>
+Description: Chemical formula generator in R language, 
+    based on the Goden 7 rules.
+License: MIT
 Encoding: UTF-8
 LazyData: true
