TargetQuantification for mzML data model

--- a/DATA/math.MRM/math.MRM.vbproj
+++ b/DATA/math.MRM/math.MRM.vbproj
@@ -105,7 +105,8 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Coordinate.vb" />
+    <Compile Include="Dumping\TargetQuantification.vb" />
+    <Compile Include="Standards.vb" />
     <Compile Include="IS.vb" />
     <Compile Include="QuantitativeAnalysis\Samples.vb" />
     <Compile Include="QuantitativeAnalysis\StandardCurve.vb" />
