get raw data for debug

--- a/DATA/math.MRM/math.MRM.vbproj
+++ b/DATA/math.MRM/math.MRM.vbproj
@@ -105,6 +105,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Dumping\MRMPeakTable.vb" />
     <Compile Include="Dumping\Extensions.vb" />
     <Compile Include="Dumping\TargetQuantification.vb" />
     <Compile Include="Extensions.vb" />
