add masswolf for waters raw

--- a/Assembly/ProteoWizard.d/ProteoWizard.d.vbproj
+++ b/Assembly/ProteoWizard.d/ProteoWizard.d.vbproj
@@ -47,7 +47,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DefineDebug>true</DefineDebug>
     <DefineTrace>true</DefineTrace>
-    <OutputPath>..\..\..\ProteoWizard.d\</OutputPath>
+    <OutputPath>..\..\..\smartnucl_integrative\biodeep_xcms\biodeep\application\Biodeep\Task\mz_biodeep.backend\App\</OutputPath>
     <DocumentationFile>ProteoWizard.d.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
     <DebugType>full</DebugType>
@@ -98,7 +98,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Biodeep|x64'">
     <DebugSymbols>true</DebugSymbols>
     <DefineTrace>true</DefineTrace>
-    <OutputPath>..\..\..\smartnucl_integrative\biodeepDB\smartnucl_integrative\build_tools\CVD_backend\App\</OutputPath>
+    <OutputPath>..\..\..\..\mz_biodeep.backend\</OutputPath>
     <DocumentationFile>ProteoWizard.d.xml</DocumentationFile>
     <Optimize>true</Optimize>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
@@ -127,6 +127,8 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MassWolf.vb" />
+    <Compile Include="Extensions.vb" />
     <Compile Include="VBServerScript.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
