using new cli model for web app

--- a/Assembly/ProteoWizard.d/ProteoWizard.d.vbproj
+++ b/Assembly/ProteoWizard.d/ProteoWizard.d.vbproj
@@ -127,6 +127,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ProteoWizardCLI.vb" />
     <Compile Include="MassWolf.vb" />
     <Compile Include="Extensions.vb" />
     <Compile Include="VBServerScript.vb" />
