--- a/DATA/MetaDNA/MetaDNA/DESCRIPTION
+++ b/DATA/MetaDNA/MetaDNA/DESCRIPTION
@@ -1,12 +1,11 @@
 Package: MetaDNA
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Identify unknown metabolite by metaDNA algorithm
 Version: 0.1.4
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Author: xieguigang
+Maintainer: xieguigang <xie.guigang@gcmodeller.org>
+Description: Identify unknown metabolite by metaDNA algorithm.
+License: MIT
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 5.0.1
