improvements on the msp data parser

--- a/Assembly/assembly/assembly.vbproj
+++ b/Assembly/assembly/assembly.vbproj
@@ -140,6 +140,7 @@
   <ItemGroup>
     <Compile Include="ASCII\MGF\Ions.vb" />
     <Compile Include="ASCII\MSP\MetaData.vb" />
+    <Compile Include="ASCII\MSP\MspParser.vb" />
     <Compile Include="ASCII\Peaks.vb" />
     <Compile Include="ASCII\MSP\Comments.vb" />
     <Compile Include="ASCII\MSP\MspData.vb" />
