--- a/Assembly/assembly/assembly.vbproj
+++ b/Assembly/assembly/assembly.vbproj
@@ -139,6 +139,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ASCII\MGF\Ions.vb" />
+    <Compile Include="ASCII\MSP\ReaderViews.vb" />
+    <Compile Include="ASCII\MSP\UnionReader.vb" />
     <Compile Include="ASCII\MSP\MetaData.vb" />
     <Compile Include="ASCII\MSP\MspParser.vb" />
     <Compile Include="ASCII\Peaks.vb" />
