--- a/DATA/ms2_math-core/ms2_math-core.vbproj
+++ b/DATA/ms2_math-core/ms2_math-core.vbproj
@@ -145,6 +145,7 @@
     <Compile Include="Ms1\PrecursorType\MolWeight.vb" />
     <Compile Include="Ms1\PrecursorType\MzCalculator.vb" />
     <Compile Include="Ms1\Tolerance.vb" />
+    <Compile Include="Ms2\PeakMs2.vb" />
     <Compile Include="Ms2\LibraryMatrixExtensions.vb" />
     <Compile Include="Ms2\GlobalAlignment.vb" />
     <Compile Include="Ms2\ms2AlignMatrix.vb" />
