--- a/visual/plot/msData-visualize.vbproj
+++ b/visual/plot/msData-visualize.vbproj
@@ -156,6 +156,7 @@
     <Compile Include="Visualize\Canvas.vb" />
     <Compile Include="Visualize\ChromatogramPeakPlot.vb" />
     <Compile Include="Visualize\ChromatogramPlot.vb" />
+    <Compile Include="Visualize\MzrtPlot.vb" />
     <Compile Include="Visualize\PeakAssign.vb" />
     <Compile Include="DATA\SpectrumJSON\SpectrumData.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
