add data model for GC/MS

--- a/DATA/GCMS_quantify/GCMS_quantify.vbproj
+++ b/DATA/GCMS_quantify/GCMS_quantify.vbproj
@@ -64,6 +64,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GCMSJson.vb" />
     <Compile Include="QuantifyAnalysis.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
@@ -113,6 +114,9 @@
       <Project>{6FF317FF-1A81-4272-A894-BFBFFB202B41}</Project>
       <Name>application.netCDF</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Vendors\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
