output to roi table

--- a/DATA/GCMS_quantify/GCMS_quantify.vbproj
+++ b/DATA/GCMS_quantify/GCMS_quantify.vbproj
@@ -133,6 +133,10 @@
       <Project>{487D7C92-D05A-4908-BF81-E6BABA0BF592}</Project>
       <Name>BinaryData</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\..\GCModeller\src\runtime\sciBASIC#\Data_science\Mathematica\Math\Math\math-core.vbproj">
+      <Project>{e3367b88-5d0c-495a-8273-331656d4b5aa}</Project>
+      <Name>math-core</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\..\GCModeller\src\runtime\sciBASIC#\Microsoft.VisualBasic.Core\47-dotnet_Microsoft.VisualBasic.vbproj">
       <Project>{FECCE1FD-E1D4-49E3-A668-60BB5E7AED99}</Project>
       <Name>47-dotnet_Microsoft.VisualBasic</Name>
