gcms scan mode viz

--- a/visual/plot/msData-visualize.vbproj
+++ b/visual/plot/msData-visualize.vbproj
@@ -153,6 +153,7 @@
   <ItemGroup>
     <Compile Include="ChromatogramPeakPlot.vb" />
     <Compile Include="ChromatogramPlot.vb" />
+    <Compile Include="GCMSscanVisual.vb" />
     <Compile Include="MzrtPlot.vb" />
     <Compile Include="PeakAssign.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
