add content unit model

--- a/DATA/GCMS_quantify/GCMS_quantify.vbproj
+++ b/DATA/GCMS_quantify/GCMS_quantify.vbproj
@@ -85,6 +85,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ContentUnits.vb" />
     <Compile Include="GCMSJson.vb" />
     <Compile Include="QuantifyAnalysis.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
