move module between projects

--- a/DATA/math.MRM/math.MRM.vbproj
+++ b/DATA/math.MRM/math.MRM.vbproj
@@ -132,6 +132,7 @@
     <Compile Include="Extensions.vb" />
     <Compile Include="QuantitativeAnalysis\MRMPeak.vb" />
     <Compile Include="QuantitativeAnalysis\FitModel.vb" />
+    <Compile Include="QuantitativeAnalysis\PeakArea.vb" />
     <Compile Include="Standards.vb" />
     <Compile Include="IS.vb" />
     <Compile Include="QuantitativeAnalysis\Samples.vb" />
